testdata/baselines/reference/submodule/compiler/es6ImportDefaultBindingFollowedWithNamespaceBinding.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
es6ImportDefaultBindingFollowedWithNamespaceBinding_1.ts(1,52): error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamespaceBinding_0' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== es6ImportDefaultBindingFollowedWithNamespaceBinding_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportDefaultBindingFollowedWithNamespaceBinding_1.ts (1 errors) ====
    import defaultBinding, * as nameSpaceBinding  from "es6ImportDefaultBindingFollowedWithNamespaceBinding_0";
                                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBindingFollowedWithNamespaceBinding_0' or its corresponding type declarations.
    var x: number = nameSpaceBinding.a;